--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<script src="軒軒的/person/js/jquery-3.2.1.min.js"></script>
 <script>
 	var xhr = new XMLHttpRequest();
-	xhr.open("GET","file:///D:/User/Desktop/test.json",true)
+	xhr.open("GET","https://memory25.github.io/kaohsiungdisasterquery/js/data.html",true)
 	xhr.send();
 </script>
 </head>
