--- a/index.html
+++ b/index.html
@@ -3,17 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-
-	<script src="軒軒的/person/js/jquery-3.2.1.min.js"></script>
-<script>
-	var xhr = new XMLHttpRequest();
-	xhr.open("GET","https://memory25.github.io/kaohsiungdisasterquery/js/data.html",true)
-	xhr.send();
-</script>
 </head>
 <body>
 
 
-
+<script src="js/main.js"></script>
 </body>
 </html>
