--- a/index.html
+++ b/index.html
@@ -1,12 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
+    <meta charset="UTF-8">
+    <title>高雄市災情案件資料</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
+    <header>
+        <h1>高雄市災情資料</h1>
+    </header>
+    <section id="query">
+        <form action="">
+            <select id="countrySelect">
+                <option value="">請選擇區域</option>
+                <option value="">楠梓區</option>
+                <option value="">左營區</option>
+                <option value="">鼓山區</option>
+                <option value="">三民區</option>
+                <option value="">鹽埕區</option>
+                <option value="">前金區</option>
+                <option value="">新興區</option>
+                <option value="">苓雅區</option>
+                <option value="">前鎮區</option>
+                <option value="">旗津區</option>
+                <option value="">小港區</option>
+                <option value="">鳳山區</option>
+                <option value="">大寮區</option>
+                <option value="">鳥松區</option>
+                <option value="">林園區</option>
+                <option value="">仁武區</option>
+                <option value="">大樹區</option>
+                <option value="">大社區</option>
+                <option value="">岡山區</option>
+                <option value="">路竹區</option>
+                <option value="">橋頭區</option>
+                <option value="">梓官區</option>
+                <option value="">彌陀區</option>
+                <option value="">永安區</option>
+                <option value="">燕巢區</option>
+                <option value="">田寮區</option>
+                <option value="">阿蓮區</option>
+                <option value="">茄萣區</option>
+                <option value="">湖內區</option>
+                <option value="">旗山區</option>
+                <option value="">美濃區</option>
+                <option value="">內門區</option>
+                <option value="">杉林區</option>
+                <option value="">甲仙區</option>
+                <option value="">六龜區</option>
+                <option value="">茂林區</option>
+                <option value="">桃源區</option>
+                <option value="">那瑪夏區</option>
+            </select>
+        </form>
+       
 
-
-<script src="js/main.js"></script>
+        <div id="showdata">
+            <div id="test"></div>
+        </div>
+    </section>
+    <script src="js/main.js"></script>
 </body>
+
 </html>
